# v-f-b-e-7

./: .gitignore  MedidasDeMemoria.ods
VeltiumCharger/main/: CMakeLists.txt  CPPNVS.cpp  CPPNVS.h  DRACO_IO.cpp  DRACO_IO.h  ESPAsyncWebServer.h  FB_HTTPClient32.h  FirebaseClient.cpp  FirebaseClient.h  FirebaseESP32.cpp  HardwareSerialMOD.cpp  HardwareSerialMOD.h  OTA_Firmware_Upgrade.cpp  OTA_Firmware_Upgrade.h  VeltFirebase.cpp  VeltFirebase.h  WS2812.cpp  Wifi_Station.cpp  Wifi_Station.h  __blink__c  ble_rcs.h  ble_rcs_config.h  ble_rcs_server.c  ble_rcs_server.h  ble_rcs_tables.h  blowfish.h  component.mk  config.cpp  config.h  control.cpp  control.h  controlLed.cpp  controlLed.h  cybtldr_api.cpp  cybtldr_api.h  cybtldr_command.cpp  cybtldr_command.h  cybtldr_parse.cpp  cybtldr_utils.h  dev_auth.h  (+18 more)
VeltiumCharger/main/ble/: ble_rcs.c  ble_rcs.h  ble_rcs_server.c  ble_rcs_server.h  ble_rcs_tables.h  blowfish.cpp  blowfish.h  dev_auth.cpp  dev_auth.h  dh.cpp  dh.h  serverble.cpp  serverble.h
VeltiumCharger/main/coms/: CDP.drawio  COAP_Client.c  COAP_Nativo.c  COAP_Nativo.cpp  COAP_Nativo.h  COAP_Server.c  COAP_Server.cpp  COAP_Server.h  Delta.drawio  Eth_Station.cpp  Eth_Station.h  FirebaseClient.cpp  FirebaseClient.h  GSM.cpp  GSM_Station.cpp  GSM_Station.h  Gestion_Grupo.cpp  Internal_Server.cpp  Internal_Server.h  MQTT.cpp  MQTT_cliente.cpp  MQTT_cliente.h  MQTT_servidor.cpp  MQTT_servidor.h  SmartConfig.cpp  SmartConfig.h  VeltFirebase.cpp  VeltFirebase.h  VeltFirebase.txt  VeltFirebase2.txt  Wifi_Station.cpp  Wifi_Station.h  contador.cpp  contador.h  ping.cpp  (+5 more)
(+282 files in other folders)
