idf_component_register(SRCS
"main.cpp"
"WS2812.cpp"
"control.cpp"
"blowfish.cpp"
"dev_auth.cpp"
"serverble.cpp"
"controlLed.cpp"
"DRACO_IO.cpp"
"FirebaseJson.cpp"
"FirebaseESP32.cpp"
"FB_HTTPClient32.cpp"
"FirebaseClient.cpp"
"wifi-station.cpp"
"HardwareSerialMOD.cpp"
"FB_WCS32.cpp"
"fb_ssl_client32.cpp"
INCLUDE_DIRS ".")


